--- a/css/styles.css
+++ b/css/styles.css
@@ -10,6 +10,7 @@
     font-size: 60px;
     top: 50%;
     left: 50%;
-    transform: translateX(-50%); }
+    transform: translateX(-50%);
+    border-bottom: solid 3px #FFF; }
 
 /*# sourceMappingURL=styles.css.map */
