--- a/css/styles.css
+++ b/css/styles.css
@@ -11,6 +11,7 @@
     top: 50%;
     left: 50%;
     transform: translateX(-50%);
-    border-bottom: solid 3px #FFF; }
+    padding: 0px 25px;
+    border-bottom: solid 2px #FFF; }
 
 /*# sourceMappingURL=styles.css.map */
